--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,6 +514,64 @@ nav{
 }
 /* Product Details End */
 
+/* Products By Industry Start */
+.industry-products{
+    padding: 4rem 7.5% 0 7.5%;
+}
+.industry-products h2{
+    text-align: center;
+    font-weight: 650;
+    font-size: calc(1.1rem + 1vw);
+    color: #386c94;
+}
+
+.industry-card-row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+}
+.industry-card{
+    width: 32%;
+    margin-bottom: 1.25rem;
+    position: relative;
+}
+.industry-card img{
+    width: 100%;
+}
+.industry-card .layer{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: #0000006c;
+    transition: all 0.2s ease;
+}
+.industry-card:hover .layer{
+    background-color: #00000099;
+}
+.industry-card .industry-card-content{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    color: #fff;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.industry-card .industry-card-content h3{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: calc(0.7rem + 1vw);
+}
+.industry-card .industry-card-content p{
+    font-size: calc(0.5rem + 0.5vw);
+    margin-top: 0.5rem;
+}
+/* Products By Industry End */
+
 /* Media Start */
 .media{
     padding: 3rem 5.6% 4rem 5.6%;
