--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -81,7 +81,7 @@
     padding: 4rem 8%;
     position: relative;
 }
-.our-journey-content h1{
+.our-journey-content h2{
     font-weight: 600;
     font-size: calc(1.3rem + 1vw);
     text-align: center;
@@ -105,18 +105,19 @@
     width: 100%;
     border: 3px solid #fff;
 }
-.timeline-slide .timeline-content h2{
+.timeline-slide .timeline-content span{
     font-weight: 800;
     font-size: calc(2.1rem + 1vw);
 }
-.timeline-slide .timeline-content h3{
+.timeline-slide .timeline-content .timeline-title{
     font-size: calc(0.9rem + 1vw);
     font-weight: 550;
-    margin-top: 1rem;
+    margin-top: 0.7rem;
+    margin-bottom: 0;
 }
-.timeline-slide .timeline-content p{
+.timeline-slide .timeline-content .timeline-desc{
     margin: 0;
-    margin-top: 1.2rem;
+    margin-top: 0.8rem;
     font-size: calc(0.5rem + 0.5vw);
     font-weight: 500;
 }
@@ -141,11 +142,9 @@
     gap: 2px;
     background: transparent;
     border: none;
-    /* color: #fff; */
     transition: color 0.2s ease;
 }
 .timeline-slide-btns button:hover{
-    /* color: #d2d2d2; */
     color: #373737;
 }
 .timeline-slide-btns button i{
@@ -156,7 +155,6 @@
 }
 /* timeline track */
 .timeline-track{
-    /* background: linear-gradient(to right, transparent, #fff 20%, #fff 80%, transparent); */
     background: linear-gradient(to right, transparent, #000 20%, #000 80%, transparent);
     height: 3px;
     width: 38%;
@@ -182,7 +180,6 @@
 .pagination-dot {
     width: 17px;
     height: 17px;
-    /* background-color: #fff; */
     background-color: #000;
     border-radius: 50%;
     border: none;
@@ -199,18 +196,15 @@
 .pagination-dot.active {
     width: 24px;
     height: 24px;
-    /* background-color: #fff; */
     background-color: #000;
     font-size: 21px;
     font-weight: bold;
     transform: scale(1.2);
     margin-top: -4px;
     border-radius: 50%;
-    /* box-shadow: 0 0 0 2px #1e1e1e, 0 0 0 3.5px #fff; */
     box-shadow: 0 0 0 2px #d4d4d4, 0 0 0 3.5px #000;
 }
 .pagination-dot span {
-    /* color: #fff; */
     transition: all 0.3s ease;
     margin-top: -60px;
     user-select: none;
@@ -225,20 +219,20 @@
 
 /* For 110% in 15 inch screens */
 @media screen and (min-width: 1230px) and (max-width: 1399px){
-   .our-journey-content h1{
+   .our-journey-content h2{
         font-size: calc(1.4rem + 1vw);
     }
     .timeline-slide .timeline-image img{
         border: 3.5px solid #fff;
     }
-    .timeline-slide .timeline-content h2{
+    .timeline-slide .timeline-content span{
         font-size: calc(2.4rem + 1vw);
     }
-    .timeline-slide .timeline-content h3{
+    .timeline-slide .timeline-content .timeline-title{
         font-size: calc(1.1rem + 1vw);
         margin-top: 1.2rem;
     }
-    .timeline-slide .timeline-content p{
+    .timeline-slide .timeline-content .timeline-desc{
         margin-top: 1.4rem;
         font-size: calc(0.6rem + 0.5vw);
     }
@@ -268,20 +262,20 @@
 
 /* For 100% in 15 inch screens */
 @media screen and (min-width: 1400px) {
-    .our-journey-content h1{
+    .our-journey-content h2{
         font-size: calc(1.5rem + 1vw);
     }
     .timeline-slide .timeline-image img{
         border: 4px solid #fff;
     }
-    .timeline-slide .timeline-content h2{
+    .timeline-slide .timeline-content span{
         font-size: calc(2.7rem + 1vw);
     }
-    .timeline-slide .timeline-content h3{
+    .timeline-slide .timeline-content .timeline-title{
         font-size: calc(1.23rem + 1vw);
         margin-top: 1.3rem;
     }
-    .timeline-slide .timeline-content p{
+    .timeline-slide .timeline-content .timeline-desc{
         margin-top: 1.5rem;
         font-size: calc(0.65rem + 0.5vw);
     }
@@ -324,7 +318,7 @@
     align-items: center;
     justify-content: center;
 }
-.brand-story-content h1{
+.brand-story-content h3{
     color: #fff;
     font-weight: 650;
     font-size: calc(1.4rem + 1vw);
@@ -349,7 +343,7 @@
 
 /* For 110% in 15 inch screens */
 @media screen and (min-width: 1230px) and (max-width: 1399px){
-   .brand-story-content h1{
+   .brand-story-content h3{
         font-size: calc(1.5rem + 1vw);
         margin-bottom: 1.2rem;
         margin-top: 3.5rem;
@@ -362,7 +356,7 @@
 
 /* For 100% in 15 inch screens */
 @media screen and (min-width: 1400px) {
-   .brand-story-content h1{
+   .brand-story-content h3{
         font-size: calc(1.6rem + 1vw);
         margin-bottom: 1.2rem;
         margin-top: 3.5rem;
@@ -377,6 +371,28 @@
 /* Chairman Start */
 .chairman{
     margin-top: 0;
+}
+.chairman-content .chairman-desc h4{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: calc(1.8rem + 0.5vw);
+    margin-top: 0.8rem;
+}
+
+/* For 110% in 15 inch screens */
+@media screen and (min-width: 1230px) and (max-width: 1399px){
+    .chairman-content .chairman-desc h4{
+        font-size: calc(1.9rem + 0.5vw);
+        margin-top: 0.85rem;
+    }
+}
+
+/* For 100% in 15 inch screens */
+@media screen and (min-width: 1400px) {
+     .chairman-content .chairman-desc h4{
+        font-size: calc(2rem + 0.5vw);
+        margin-top: 0.9rem;
+    }
 }
 /* Rest styles are coming from Home Page Chairman Message Section (style.css) */
 /* Chairman End */
@@ -413,11 +429,11 @@
 .vision-mission-card img{
     width: 100%;
 }
-.vision-mission-card h1{
+.vision-mission-card h5{
     font-weight: 600;
     font-size: calc(1.3rem + 1vw);
 }
-.vision-mission-card h2{
+.vision-mission-card h6{
     font-size: calc(0.8rem + 0.5vw);
     margin: 2rem 0;
 }
@@ -433,10 +449,10 @@
     .vision-mission-card{
         padding: 8rem 3.4rem 2rem 3.4rem;
     }
-    .vision-mission-card h1{
+    .vision-mission-card h5{
         font-size: calc(1.4rem + 1vw);
     }
-    .vision-mission-card h2{
+    .vision-mission-card h6{
         font-size: calc(0.9rem + 0.5vw);
         margin: 2.2rem 0;
     }
@@ -453,10 +469,10 @@
     .vision-mission-card{
         padding: 8.8rem 3.8rem 2rem 3.8rem;
     }
-    .vision-mission-card h1{
+    .vision-mission-card h5{
         font-size: calc(1.5rem + 1vw);
     }
-    .vision-mission-card h2{
+    .vision-mission-card h6{
         font-size: calc(0.93rem + 0.5vw);
         margin: 2.3rem 0;
     }
