--- a/assets/css/coming-soon.css
+++ b/assets/css/coming-soon.css
@@ -25,7 +25,7 @@
     text-transform: uppercase;
     font-size: calc(1rem + 1vw);
 }
-.banner .banner-layer p{
+.banner .banner-layer h2{
     font-size: calc(0.6rem + 0.5vw);
     font-weight: 500;
     margin-top: 1.2rem;
