--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,6 +6,7 @@
 }
 .about-banner img{
     width: 100%;
+    height: auto;
 }
 .about-banner-layer{
     width: 100%;
@@ -103,6 +104,7 @@
 }
 .timeline-slide .timeline-image img{
     width: 100%;
+    height: auto;
     border: 3px solid #fff;
 }
 .timeline-slide .timeline-content span{
@@ -428,6 +430,7 @@
 }
 .vision-mission-card img{
     width: 100%;
+    height: auto;
 }
 .vision-mission-card h5{
     font-weight: 600;
