--- a/assets/css/product-internal-pages.css
+++ b/assets/css/product-internal-pages.css
@@ -108,6 +108,7 @@
 }
 .feature-card .card-img img{
     width: 20%;
+    height: auto;
 }
 .feature-card h2{
     font-size: calc(0.75rem + 0.5vw);
@@ -223,6 +224,7 @@
 }
 .apps-card img{
     width: 100%;
+    height: auto;
 }
 .apps-card .blue-layer{
     width: 100%;
@@ -314,9 +316,11 @@
 }
 .quality .quality-card-row .quality-card img{
     width: 50px;
+    height: auto;
 }
 .quality .quality-card-row #quality-card-4 img{
     width: 38px;
+    height: auto;
 }
 .quality .quality-card-row .quality-card h2{
     text-align: center;
@@ -396,6 +400,7 @@
 }
 .after-sale-cards-box .after-sale-card .card-left img{
     width: 100%;
+    height: auto;
 }
 .after-sale-cards-box .after-sale-card .card-right{
     width: 85%;
@@ -432,6 +437,7 @@
 }
 .after-sale-right img{
     width: 100%;
+    height: auto;
     border-radius: 8px;
     margin-top: 0.5rem;
 }
@@ -504,6 +510,7 @@
 }
 .sets-apart-card .img-box img{
     width: 100%;
+    height: auto;
 }
 .sets-apart-card h2{
     color: #5b5b5b;
