--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -172,14 +172,14 @@
     margin-top: 0.8rem;
     padding: 1rem;
 }
-.corporate-office .corp-card h3{
+.corporate-office .corp-card span{
     font-size: calc(0.7rem + 0.5vw);
     font-weight: 700;
 }
 .corporate-office .corp-card p{
     font-size: calc(0.45rem + 0.5vw);
     margin: 0;
-    margin-top: 0.1rem;
+    margin-top: 0.3rem;
     font-weight: 450;
 }
 .corporate-office .corp-card a{
@@ -194,7 +194,7 @@
 .manufacturing-units{
     padding: 2.5rem 8%;
 }
-.manufacturing-units h2{
+.manufacturing-units h3{
     border-bottom: 1px solid #9d9d9d;
     font-size: calc(0.7rem + 1vw);
     font-weight: 650;
@@ -215,14 +215,15 @@
     overflow: hidden;
     margin-bottom: 1rem;
 }
-.manufacturing-card-row .manufacturing-card h3{
+.manufacturing-card-row .manufacturing-card span{
     font-size: calc(0.7rem + 0.5vw);
     font-weight: 700;
+    line-height: normal;
 }
 .manufacturing-card-row .manufacturing-card p{
     font-size: calc(0.45rem + 0.5vw);
     margin: 0;
-    margin-top: 0.1rem;
+    margin-top: 0.3rem;
     font-weight: 450;
 }
 .manufacturing-card-row .manufacturing-card a{
