--- a/assets/css/our-presence.css
+++ b/assets/css/our-presence.css
@@ -9,6 +9,12 @@
     font-size: calc(1.1rem + 1vw);
     color: #386c94;
 }
+.media-boxes h3{
+    font-size: calc(0.5rem + 0.5vw);
+}
+.media-boxes .media-aside h3{
+    margin-top: 1rem;
+}
 
 .media .swiper-button-prev,
 .media .swiper-button-next {
