--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,13 +195,16 @@ nav{
 /* Banner Pop-up Start */
 .banner-pop-up{
     position: fixed;
-    bottom: 3rem;
-    right: 3rem;
-    width: 30%;
+    bottom: 2rem;
+    right: 5rem;
+    width: 27%;
     z-index: 100;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    transition: all 1s ease;
+    transition: all 2s ease;
+}
+.banner-pop-up.hide {
+    right: -100%;
 }
 .banner-pop-up.hide{
     right: -100%;
